# aoc

./: .gitignore  LICENSE  pyproject.toml
2023/1/: solution.py
2023/10/: solution.py
2023/11/: solution.py
2023/12/: solution.py
2023/13/: solution.py
2023/14/: solution.py
2023/15/: solution.py
2023/16/: solution.py
2023/17/: solution.py
2023/18/: solution.py
2023/19/: solution.py
2023/2/: solution.py
2023/20/: solution.py
2023/21/: solution.py
2023/22/: solution.py
2023/23/: solution.py
2023/24/: solution.py
2023/25/: solution.py
2023/3/: solution.py
2023/4/: solution.py
2023/5/: solution.py
2023/6/: solution.py
2023/7/: solution.py
2023/8/: solution.py
2023/9/: solution.py
2024/01/: solution.py
2024/02/: solution.py
2024/03/: solution.py
2024/04/: solution.py
2024/06/: solution.py
2024/07/: solution.py
2024/09/: solution.py
2024/1/: solution.py
2024/10/: solution.py
2024/11/: solution.py
2024/12/: solution.py
2024/13/: solution.py
2024/14/: solution.py
2024/15/: solution.py
2024/16/: solution.py
2024/17/: solution.py
2024/18/: solution.py
2024/19/: solution.py
2024/2/: solution.py
2024/20/: solution.py
2024/21/: solution.py
2024/22/: solution.py
2024/23/: solution.py
2024/24/: solution.py
2024/25/: solution.py
2024/4/: solution.py
2024/5/: solution.py
2024/6/: solution.py
2024/8/: solution.py
2025/01/: solution.py
2025/02/: solution.py
2025/03/: solution.py
2025/04/: solution.py
2025/05/: solution.py
libs/: profiler.py  run.py  utils.py
