[project]
name = "aoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "advent-of-code-data>=2.0.4",
    "graphviz>=0.20.3",
    "ipython>=8.31.0",
    "matplotlib>=3.10.0",
    "mypy>=1.13.0",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "ruff>=0.8.1",
    "z3>=0.2.0",
]

[tool.ruff]
line-length = 100
